# raytracer

./: .gitignore  Cargo.toml  Dockerfile
scripts/: deploy.sh  request.sh  request_all.sh  video.sh
src/: lib.rs  main.rs  trispline.rs  video.rs  window.rs
src/geo/: axis_plane.rs  bounds.rs  color.rs  mod.rs  plane.rs  ray.rs  sphere.rs  transform.rs  triangle.rs  view.rs
src/math/: mat.rs  mod.rs  quat.rs  scalar.rs  scalar_key.rs  vec.rs
src/render/: any_object.rs  dielectric.rs  image.rs  material.rs  mesh_object.rs  mod.rs  object.rs  plane_object.rs  renderer.rs  scene_object.rs  sphere_object.rs  transform_object.rs
src/tree/: benchmark.rs  bv_kd_tree.rs  bvh.rs  bvh_cluster.rs  bvh_joint.rs  bvh_subdivide.rs  kd_tree.rs  mod.rs  seq_tree.rs
src/util/: binary_heap.rs  capped_heap.rs  counter.rs  itertools2.rs  mod.rs  rayon.rs  rayon_tracker.rs
